# justencrypt-dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  package-lock.json  package.json  tailwind.config.js
assets/: tailwind.css
src/: main.rs
src/components/: file_explorer.rs  home.rs  login_form.rs  mod.rs
