[package]
name = "Justencrypt"
version = "0.1.0"
authors = ["J-Dawg <51927580+jsheaves-stack@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5.1", features = ["web", "desktop", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json", "cookies"] }
async-recursion = "1.1.1"
futures = "0.3.30"
serde_json = "1.0.64"
serde = "1.0.196"
