[package]
name = "justencrypt-client"
version = "0.1.0"
edition = "2021"
authors = ["Justin Sheaves"]
description = "A file encryption service"
license = "MIT"

[dependencies]
tracing = "0.1.40"
dioxus-logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json", "cookies"] }
async-recursion = "1.1.1"
futures = "0.3.30"
serde_json = "1.0.64"
serde = "1.0.196"
regex = "1.10.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.5.1", features = ["desktop", "router"] }
dioxus-desktop = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.5.1", features = ["web", "router"] }
